# p2pool-v2

./: .gitignore  Cargo.toml  config-testnet4.toml  config.1.toml  config.2.toml  config.toml  justfile
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
bitcoindrpc/: Cargo.toml
bitcoindrpc/src/: lib.rs  test_utils.rs
docker/: Dockerfile.bitcoind  Dockerfile.ckpool-solo  Dockerfile.p2pool  cpuminer-startup.sh  docker-compose.yml  run-p2pool.sh
docker/signet/: bitcoin-signet.conf  ckpool-solo-signet.json
docker/testnet4/: bitcoin-testnet4.conf  ckpool-solo-testnet4.json
docs/tower-layer/: requst-response-message-flow-before-and-after-towerLayer
load-tests/: .gitignore  README.adoc  ckpool-testnet4-solo.json  run_jmeter.sh  stratum.jmx
load-tests/mock-bitcoind/: README.md  package.json  server.js
p2poolv2_atomic_swap/: Cargo.toml  config.toml  readme.md
p2poolv2_atomic_swap/src/: bitcoin.rs  cli.rs  configuration.rs  htlc.rs  lightning_node.rs  main.rs  swap.rs
p2poolv2_atomic_swap/src/bitcoin/: checks.rs  p2tr2.rs  tx_utils.rs  utils.rs
p2poolv2_atomic_swap/src/cli/: atomic_swap_functions.rs  cli_function.rs
p2poolv2_atomic_swap/src/lightning_node/: checks.rs  event_handler.rs
p2poolv2_bin/src/: main.rs
p2poolv2_lib/: Cargo.toml
p2poolv2_lib/src/: config.rs  lib.rs
p2poolv2_lib/src/command/: mod.rs
p2poolv2_lib/src/middleware/: inactivity.rs  mod.rs
p2poolv2_lib/src/node/: actor.rs  mod.rs  request_response_handler.rs
p2poolv2_lib/src/node/p2p_message_handlers/: mod.rs
p2poolv2_lib/src/node/p2p_message_handlers/receivers/: getblocks.rs  getheaders.rs  share_blocks.rs  share_headers.rs
p2poolv2_lib/src/service/: mod.rs  p2p_service.rs
p2poolv2_lib/src/shares/: handle_mining_message.rs
p2poolv2_lib/src/shares/validation/: bitcoin_block_validation.rs  mod.rs
p2poolv2_lib/src/spammer/: mod.rs  spam_service.rs
p2poolv2_lib/src/stratum/: messages.rs  server.rs  session.rs
p2poolv2_lib/src/stratum/message_handlers/: authorize.rs  submit.rs
p2poolv2_lib/src/utils/: time_provider.rs
src/: ckpool_integration.rs  config.rs  main.rs  p2pool.c  p2pool.h
src/command/: mod.rs
src/node/: actor.rs  gossip_handler.rs  messages.rs  mod.rs  rate_limiter.rs  request_response_handler.rs
src/node/p2p_message_handlers/: known_blocks_lookup.rs  mod.rs  server.rs
src/node/p2p_message_handlers/handle_requests/: getblocks.rs  getheaders.rs  inventory.rs  mod.rs
src/node/p2p_message_handlers/handle_responses/: mod.rs  receive_send_inventory.rs  receive_share_blocks.rs  receive_share_headers.rs
src/node/p2p_message_handlers/receivers/: getblocks.rs  getheaders.rs  share_blocks.rs  share_headers.rs
src/shares/: ckpool_socket.rs  handle_mining_message.rs  mod.rs
src/shares/chain/: actor.rs  chain.rs
src/shares/miner_message/: builders.rs
src/shares/store/: mod.rs
src/shares/validation/: bitcoin_block_validation.rs  mod.rs  share_validation.rs
src/stratum/: error.rs  messages.rs  mod.rs  plan.md  server.rs  session.rs
src/stratum/message_handlers/: authorize.rs  mod.rs  submit.rs  subscribe.rs
src/test_utils/: mod.rs
stratum/: Cargo.toml
stratum/src/: error.rs  messages.rs  server.rs  share_block.rs
stratum/src/message_handlers/: mod.rs  submit.rs
stratum/src/work/: coinbase.rs  error.rs  gbt.rs  mod.rs  notify.rs  tracker.rs
stratum/src/work/difficulty/: mod.rs  validate.rs
tests/: node_swarm_test.rs  receive_shares_from_self_and_peers_test.rs  stratum_server_test.rs
tests/common/: mod.rs
tests/test_data/gbt/regtest/ckpool/four-txns/: gbt.json  notify.json
tests/test_data/gbt/regtest/ckpool/one-txn/: gbt.json  notify.json
tests/test_data/gbt/regtest/ckpool/three-txns/: gbt.json  notify.json
tests/test_data/gbt/regtest/ckpool/two-txns/: gbt.json  notify.json
tests/test_data/gbt/signet/: gbt-no-transactions.json
tests/test_data/validation/stratum/a/: notify.json  submit.json  template.json
tests/test_data/validation/stratum/b/: authorize_response.json  notify.json  result.json  submit.json  template.json
tools/log_dashboard/: parser.py
