[package]
name = "p2poolv2"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
libp2p = { version = "0.53", features = [
    "tcp",
    "dns",
    "tokio",
    "noise",
    "yamux",
    "identify",
    "macros",
    "gossipsub",
    "kad",
    "mdns",
    "secp256k1",
    "request-response",
] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
hex = "0.4.3"
ciborium = "0.2.2"
rocksdb = "0.22.0"
async-trait = "0.1.83"
thiserror = "2.0.8"
ciborium-io = "0.2.2"
serde_json = "1.0.135"
rust_decimal = { version = "1.36.0", features = [
    "serde",
    "serde-with-arbitrary-precision",
] }
rust_decimal_macros = "1.36.0"
zmq = "0.10"
mockall = "0.13.1"
mockall_double = "0.3.1"
bitcoin = { version = "0.32.5", features = ["serde"] }
jsonrpsee = { version = "0.24", features = ["http-client", "client"] }
base64 = "0.22.1"
void = "1.0.2"
uint = "0.9.5"

[lib]
name = "p2poolv2"
path = "src/lib.rs"

[[bin]]
name = "p2poolv2"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.15.0"
test-log = { version = "0.2.17", features = ["trace"] }
tokio = { version = "1.0", features = ["full", "test-util"] }
rand = "0.8"
wiremock = "0.6.2"
