[workspace]
members = [
    "stratum",
    "bitcoindrpc",
    "p2poolv2_lib",
    "p2poolv2_bin",
    "p2poolv2_cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[workspace.dependencies]
libp2p = { version = "0.53", features = [
    "tcp",
    "dns",
    "tokio",
    "noise",
    "yamux",
    "identify",
    "macros",
    "gossipsub",
    "kad",
    "mdns",
    "secp256k1",
    "request-response",
] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
hex = "0.4.3"
ciborium = "0.2.2"
rocksdb = "0.23.0"
async-trait = "0.1.83"
thiserror = "2.0.8"
ciborium-io = "0.2.2"
serde_json = "1.0.135"
rust_decimal = { version = "1.36.0", features = [
    "serde",
    "serde-with-arbitrary-precision",
] }
rust_decimal_macros = "1.36.0"
zmq = "0.10"
bitcoin = { version = "0.32.5", features = ["serde", "rand"] }
jsonrpsee = { version = "0.24", features = ["http-client", "client"] }
base64 = "0.22.1"
void = "1.0.2"
tokio-util = "0.7.15"
tokio-stream = "0.1.17"
p2poolv2_lib = { path = "p2poolv2_lib" }
stratum = { path = "stratum" }

# This package declaration is required to make the top-level directory buildable
# even though we're using a workspace structure
[package]
name = "p2pool-v2"
version = "0.1.0"
edition = "2021"
publish = false

# Repeat dependencies for use in integration tests
[dependencies]
p2poolv2_lib = { path = "p2poolv2_lib" }
stratum = { path = "stratum" }
bitcoindrpc = { path = "bitcoindrpc" }

# Repeat dev dependencies for use integration tests
[dev-dependencies]
bitcoin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tempfile = "3.15.0"
zmq = "0.10"
tracing = "0.1"
libp2p = { version = "0.53", features = [
    "tcp",
    "dns",
    "tokio",
    "noise",
    "yamux",
    "identify",
    "macros",
    "gossipsub",
    "kad",
    "mdns",
    "secp256k1",
    "request-response",
] }
mockall_double = "0.3.1"
mockall = "0.13.1"
