[package]
name = "bitcoindrpc"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[lib]
path = "src/lib.rs"

[dependencies]
base64.workspace = true
bitcoin.workspace = true
jsonrpsee.workspace = true
serde.workspace = true
serde_json.workspace = true
mockall = { version = "0.13.1", optional = true }
hex.workspace = true
wiremock = { version = "0.6.2", optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
test-log = { version = "0.2.17", features = ["trace"] }
tokio = { version = "1.0", features = ["full", "test-util"] }
mockall = "0.13.1"
wiremock = "0.6.2"

[features]
test-utils = ["wiremock"]
