[package]
name = "p2poolv2_atomic_swap"
version = "0.0.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
ldk-node = "0.5.0"
tokio = { workspace = true , features = ["full"]}
config = {workspace = true}
serde = {workspace = true, features = ["derive"] }
futures = { workspace = true }
hex = {workspace = true}
